--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
     "private": true,
     "dependencies": {},
     "devDependencies": {
+        "eslint": "^5.3.0",
+        "eslint-config-standard": "^11.0.0",
+        "eslint-plugin-import": "^2.13.0",
+        "eslint-plugin-node": "^7.0.1",
+        "eslint-plugin-promise": "^3.8.0",
+        "eslint-plugin-screeps": "^1.4.0",
+        "eslint-plugin-standard": "^3.1.0",
         "grunt": "^1.0.3",
         "grunt-screeps": "^1.4.0",
         "lodash": "^3.10.0"
