Haulers fill towers
Prevent error if Labs are destroyed.
Taken more rooms.
Started on the brain.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
         "screeps/screeps": true
     },
     "globals": {
-        "Empire": true
+        "Empire": true,
+        "brain": true
     },
     "rules":{
         "semi": ["error", "always"],
