Replaced brain with os. Added os.logger.
Also removed some squad related code. Will be changing how it works.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
     },
     "globals": {
         "Empire": true,
-        "brain": true
+        "os": true
     },
     "rules":{
         "semi": ["error", "always"],
