--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
     "private": true,
     "dependencies": {},
     "devDependencies": {
-        "eslint": "^5.16.0",
+        "eslint": "^6.8.0",
         "eslint-config-standard": "^11.0.0",
-        "eslint-plugin-import": "^2.17.3",
+        "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-node": "^7.0.1",
         "eslint-plugin-promise": "^3.8.0",
-        "eslint-plugin-screeps": "^1.4.0",
+        "eslint-plugin-screeps": "^2.0.0",
         "eslint-plugin-standard": "^3.1.0",
-        "grunt": "^1.0.4",
-        "grunt-screeps": "^1.4.0",
-        "lodash": "^3.10.0"
+        "grunt": "^1.1.0",
+        "grunt-screeps": "^1.4.0"
     }
 }
